--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.0",
-    "@angular/cdk": "^9.0.0",
+    "@angular/animations": "9.1.0",
+    "@angular/cdk": "9.2.0",
     "@angular/common": "8.2.14",
     "@angular/compiler": "8.2.14",
     "@angular/core": "8.2.14",
@@ -12,11 +12,18 @@
     "@angular/platform-browser": "8.2.14",
     "@angular/platform-browser-dynamic": "8.2.14",
     "@angular/router": "8.2.14",
-    "angular-bootstrap-md": "^9.0.0",
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "angular-bootstrap-md": "9.0.0",
+    "animate.css": "^3.7.2",
+    "bootstrap": "4.4.1",
     "bs-stepper": "1.7.0",
     "core-js": "2.6.11",
+    "font-awesome": "4.7.0",
+    "jquery": "3.4.1",
+    "mdbootstrap": "4.14.1",
+    "popper.js": "1.16.1",
     "rxjs": "6.5.4",
-    "tslib": "^1.10.0",
+    "tslib": "1.11.1",
     "zone.js": "0.9.1"
   },
   "scripts": {
