--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@angular/platform-browser": "8.2.14",
     "@angular/platform-browser-dynamic": "8.2.14",
     "@angular/router": "8.2.14",
-    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@fortawesome/angular-fontawesome": "0.6.1",
+    "@fortawesome/fontawesome-free": "5.13.0",
+    "@fortawesome/fontawesome-svg-core": "1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "angular-bootstrap-md": "9.0.0",
-    "animate.css": "^3.7.2",
+    "animate.css": "3.7.2",
     "bootstrap": "4.4.1",
     "bs-stepper": "1.7.0",
     "core-js": "2.6.11",
     "font-awesome": "4.7.0",
     "jquery": "3.4.1",
+    "mdb": "0.1.0",
     "mdbootstrap": "4.14.1",
     "popper.js": "1.16.1",
     "rxjs": "6.5.4",
